# MetalCompute

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: optimization.md
.github/workflows/: cmake-dev-tests.yml  cmake-main-tests.yml  cmake-single-platform.yml  codeql.yml  static.yml
MetalCompute/: Makefile  hellogpu.cpp
cmake/: FindFoundation.cmake  FindMetal.cmake  FindMetalKit.cmake
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  default.metal  matrixmultiplication.cpp  metalcompute2dtexture.cpp  metalcompute3dtexture.cpp  metalcomputeboth.cpp  metalcomputebuffer.cpp  metalcomputegpu.cpp  metalcomputetexture.cpp  metalcomputetexturecomponent.cpp  verbosebuffer.cpp
src/: CMakeLists.txt  MTLCompute.hpp  MTLComputeBuffer.hpp  MTLComputeCommandManager.hpp  MTLComputeErrors.hpp  MTLComputeGPU.hpp  MTLComputeGlobals.hpp  MTLComputeKernel.hpp  MTLComputeTexture.hpp  default.metal  hellogpu.cpp  hellometalcompute.cpp  hellotexture.cpp
test/: BufferTest.cpp  CMakeLists.txt  CommandManagerTest.cpp  GPUTest.cpp  KernelTest.cpp  Texture1DTest.cpp  Texture2DTest.cpp  Texture3DTest.cpp  TextureTest.cpp  default.metal  test.cpp
